Changes for auto-gen of env via Docker

--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -13,7 +13,7 @@
       class="btn btn-primary animate-jump-in animate-delay-100 animate-once">
       <ng-icon name="heroAdjustmentsHorizontal" class="mr-1 text-lg"></ng-icon>
       <span class="sr-only">Applied Filter Count</span>
-      Filters
+      Search
       @if (filterCount() > 0) {
         <div class="count-badge">
           {{ filterCount() }}
