Switched add hunts page to use existing aux data in store.

--- a/src/scss/components/add-hunts.scss
+++ b/src/scss/components/add-hunts.scss
@@ -14,7 +14,14 @@ div.add-hunts {
     input,
     select {
       font-size: 13px;
-      @apply bg-gray-900
     }
   }
+
+  td.disabled {
+    input, select, label {
+      text-decoration: line-through;
+      background-color: red;
+    }
+  }
+
 }
