Improvements to wx details mobile styling

--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -194,9 +194,9 @@
 <gawmas-drawer #filterDrawer [targetElement]="filterDrawerTarget">
 
   <form class="form" [formGroup]="filterForm">
-    <div class="flex items-center ml-3 lg:border-b lg:border-gray-500 pb-2">
+    <div class="flex items-center ml-3 mt-4 lg:border-b lg:border-gray-500 pb-2">
       <h3 class="hidden lg:flex-1 md:block lg:block text-xl font-semibold text-gray-200 align-baseline pl-3">
-        Filter Hunt Results {{ selectedWmaIds() }}
+        Filter Hunt Results
       </h3>
       <div class="flex md:pr-2 md:ml-3">
         <button (click)="apply()" type="button" class="btn btn-primary">
